Added Absence entity. Added StudentQuery internal class to StudentListActivity. Added name to manifest. Added Stetho dependencies.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
   package="edu.cnm.deepdive.attendance">
 
   <application
+    android:name=".AttendanceApplication"
     android:allowBackup="false"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
